--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,4 @@
 - кнопки верхние
 - изменить стиль баттона "добавить"
 - изменить плюсик в кнопке на обычный и убрать либу
+- сделать таблицу атрибутов
